# hack-the-throne

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
backend/: README.md  problem.md  requirements.txt
backend/app/: main.py
backend/app/audio/: __init__.py  denoiser.py  embedder.py  pipeline.py  segmenter.py
backend/app/core/: __init__.py  models.py
backend/app/services/: conversation_stream.py  convex_client.py  vector_store.py
backend/app/video/: pipeline.py
frontend/: .env.convex  CLAUDE.md  convex.json  package-lock.json  package.json  pnpm-lock.yaml  server.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/rayban-panel/: page.tsx
frontend/components/: ConvexClientProvider.tsx  PersonContextCard.tsx  ai-overlay.tsx  face-notification.tsx  notification-toast.tsx  person-notification.tsx  rayban-overlay.tsx  webcam-stream.tsx
frontend/components/dashboard/: ActivityFeed.tsx  PeopleGrid.tsx  StatsCard.tsx
frontend/convex/: context.ts  fix_name.ts  reset.ts  schema.ts  speakers.ts
frontend/hooks/: use-face-detection.ts  usePersonContext.ts
frontend/lib/: coordinate-mapper.ts  face-tracker.ts
frontend/workers/: face-detection.worker.ts
inference/: .gitignore  AR_GLASSES_SIMPLE_DESIGN.md  DEMENTIA_CARE_UPDATES.md  OPTIONAL_IDS_UPDATE.md  README.md  TWO_EVENT_DESIGN.md  TWO_EVENT_TYPES_FINAL.md  database.py  fireworks_client.py  llm_client.py  main.py  mock_consumer.py  mock_metadata_service.py  models.py  requirements.txt  seed_mongodb.py  setup.sh
(+2 files in other folders)
